# kubeguardian

./: .dockerignore  .gitignore  Dockerfile  README.md  chat.env  const.py  consume.py  facts.txt  frontend.yaml  helpers.py  main.py  port_management.env  pyproject.toml  rabitmq.py  requirements.txt  sessions.db  stream.py  stream_k8s_events.py
agent/: Dockerfile  const.py  main.py  prompts.py  pyproject.toml  toolset.py
agent/chat/: agent.py
agent/remediator/: agent.py
agents/: observer_agent.py  prompts.py  rca_agent.py  remediator_agent.py  toolset.py
chat/: Dockerfile  api.py
custom-kubectl-ai/: Dockerfile
db/: session.db  session_db.yaml
faulty_app/: Dockerfile  deployment.yaml
frontend/: Dockerfile  package-lock.json  package.json
guardian/: Dockerfile  agent.py  api.py  const.py  helpers.py  main.py  prompts.py  run.py  testevent.py
kubernetes-manifests/: agent.yaml  ai-agent-deployment.yaml  ai-agent-service.yaml  chat-deployment.yaml  chat-service.yaml  chat.yaml  custom-mcp-server.yaml  demosecret.yaml  frontend.yaml  kubectl-ai.yaml  mcp-server.yaml  network.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-service.yaml  postgres.yaml  publisher.yaml  rabbimq.yaml  rabbitmq.yaml  secret.yaml  service.yaml  subscriber.yaml  subsriber.yaml
mcp/: server.py  server_raw.py
mcp_server/: Dockerfile  const.py  custom_tools.py  helpers.py  pyproject.toml  server.py
orchestration/: const.py
orchestrator/: api.py  const.py  deployment.yaml  helpers.py  pub.py  sub.py  types.py
pub/: Dockerfile  helpers.py  pub.py  pyproject.toml
(+63 files in other folders)
